@@ -1,9 +1,9 @@
 {
 	"Name":"BrivGemFarm HybridTurboStacking",
-	"Version": "v1.1.7",
+	"Version": "v1.1.8",
     "Includes" : "IC_BrivGemFarm_HybridTurboStacking_Includes.ahk",
     "Author" : "ImpEGamer",
-    "Url" : "https://github.com/imp444/IC_Addons/tree/main/IC_BrivGemFarm_HybridTurboStacking_Extra",
+    "Url" : "https://github.com/antilectual/IC_Addons-1/tree/Anti-Changes/IC_BrivGemFarm_HybridTurboStacking_Extra",
     "Info" : "This Addon will improve the speed of hybrid stacking during gem farming.",
     "Dependencies" : [
         {
