@@ -1,9 +1,9 @@
 {
 	"Name":"BrivGemFarm LevelUp",
-	"Version": "v1.4.0",
+	"Version": "v1.4.1",
     "Includes" : "IC_BrivGemFarm_LevelUp_Component.ahk",
     "Author" : "ImpEGamer",
-    "Url" : "https://github.com/imp444/IC_Addons/tree/main/IC_BrivGemFarm_LevelUp_Extra",
+    "Url" : "https://github.com/antilectual/IC_Addons-1/tree/Anti-Changes/IC_BrivGemFarm_LevelUp_Extra",
     "Info" : "This Addon will allow to set up maximum champion level settings for BrivGemFarm.",
     "Dependencies" : [
         {
