@@ -1,3 +1,8 @@
+October 22, 2025
+    - Changed update URL to Anti's for now.
+    - Updated how levelupx25 works.
+    - Fixed bug with Baldric not entering formation.
+
 October 19, 2025
     - Many fixes/changes to work with BrivGemFarm 4.4.3
     - Removed StackFarmSetup (should be unnecessary) and removed all click related code from BrivFeatSwap.
