@@ -1,3 +1,7 @@
+October 22, 2025
+    - Changed update URL to Anti's for now.
+    - Prevet FORT restart happening on very first run.
+
 October 19, 2025
     - Many fixes/changes to work with BrivGemFarm 4.4.3
     - Updated to use BrivGemFarm's PredictStacks function.
